# image-matching-webui

./: .clang-format  .flake8  .gitattributes  .gitignore  .gitmodules  .mintignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  activate.sh  app.py  build_docker.sh  config.yaml  docker-compose.yml  docs.json  env-docker.txt  environment.yaml  format.sh  main.py  netlify.toml  package.json  packages.txt  pre-requirements.txt  pyproject.toml  railway.toml  requirements.txt  run.sh  run_docker.sh  server.py  style.css  test_app_cli.py  vercel.json
.claude/skills/deploy-hf/: SKILL.md
.claude/skills/integrate-matcher/: SKILL.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  matcher_request.md  question.md
.github/workflows/: check-lint.yml  ci.yml  docker-publish.yml  format.yml  matcher-bot.yml  pip.yml  release.yml
api/: __init__.py  client.py  core.py  server.py  types.py
api/config/: api.yaml
api/test/: CMakeLists.txt  client.cpp  helper.h
common/: api.py  app_class.py  config.yaml  utils.py  visualize_util.py  viz.py
config/: app.yaml  config.yaml
cpp/: README.md
cpp/test/: CMakeLists.txt  client.cpp  helper.h
datasets/wxbs_benchmark/: download.py  example.py
docker/: build_docker.bat  run_docker.sh  start.sh
docs/: api.mdx  api.rst  cli.mdx  cli.rst  conf.py  configuration.mdx  configuration.rst  development.mdx  development.rst  docs.json  index.rst  installation.mdx  installation.rst  introduction.mdx  models.mdx  models.rst  quickstart.mdx  quickstart.rst  requirements.txt  troubleshooting.mdx  troubleshooting.rst
docs/api/: config-utils.mdx  core.mdx  geometry.mdx  image-utils.mdx  matching.mdx  visualization.mdx
extra_utils/: plotting.py  utils.py
hloc/: __init__.py  colmap_from_nvm.py  extract_features.py  localize_inloc.py  localize_sfm.py  match_dense.py  match_features.py  pairs_from_exhaustive.py  pairs_from_poses.py  pairs_from_retrieval.py  reconstruction.py  triangulation.py  visualization.py
hloc/extractors/: alike.py  aliked.py  cosplace.py  d2net.py  darkfeat.py  dedode.py  dir.py  disk.py  dog.py  example.py  fire.py  fire_local.py  lanet.py  netvlad.py  r2d2.py  rekd.py  rord.py  sfd2.py  sift.py  superpoint.py  xfeat.py
hloc/matchers/: adalam.py  aspanformer.py  cotr.py  dkm.py  dual_softmax.py  duster.py  eloftr.py  gim.py  gluestick.py  imp.py  lightglue.py  loftr.py  mast3r.py  mickey.py  nearest_neighbor.py  omniglue.py  roma.py  sgmnet.py  sold2.py  superglue.py  topicfm.py  xfeat_dense.py  xfeat_lightglue.py  xoftr.py
hloc/pipelines/4Seasons/: localize.py  prepare_reference.py  utils.py
hloc/pipelines/7Scenes/: create_gt_sfm.py  pipeline.py  utils.py
hloc/pipelines/Aachen/: pipeline.py
hloc/pipelines/Aachen_v1_1/: pipeline.py  pipeline_loftr.py
hloc/pipelines/CMU/: pipeline.py
hloc/pipelines/Cambridge/: pipeline.py  utils.py
hloc/pipelines/RobotCar/: colmap_from_nvm.py  pipeline.py
hloc/utils/: __init__.py  base_model.py  database.py  geometry.py  io.py  parsers.py  read_write_model.py  viz.py  viz_3d.py
imcui/: __init__.py  app.py
imcui/api/: __init__.py  client.py  core.py  server.py
imcui/api/config/: api.yaml
imcui/api/test/: build_and_run.sh  client.cpp
imcui/cli/: main.py
imcui/config/: api.yaml  app.yaml
imcui/hloc/: __init__.py  extract_features.py  match_dense.py  match_features.py  reconstruction.py  triangulation.py
imcui/hloc/configs/: __init__.py  extractors.py  matchers.py
imcui/hloc/extractors/: alike.py  aliked.py  cosplace.py  d2net.py  darkfeat.py  dedode.py  dir.py  disk.py  dog.py  eigenplaces.py  (+15 more)
imcui/ui/: __init__.py  app_class.py  config.py  config_utils.py  examples.py  geometry.py  image_matching_app.py  image_utils.py  matching.py  model_cache.py  modelcache.py  sfm.py  sfm_engine.py  utils.py  visualization.py  viz.py
imcui/utils/: __init__.py  config.py
tests/: config.yaml  demo.ipynb  test_basic.py  test_cli_app.py  test_image_matching.py
ui/: api.py  app_class.py  config.yaml  sfm.py  utils.py  viz.py
utils/: plotting.py  utils.py  visualize_util.py
(+121 files in other folders)
