[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image-matching-webui"
description = "Image Matching Webui: A tool for matching images using sota algorithms with a Gradio UI"
version = "1.0"
authors = [
    {name = "vincentqyw"},
]
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
urls = {Repository = "https://github.com/Vincentqyw/image-matching-webui"}
dynamic = ["dependencies"]


[project.optional-dependencies]
dev = ["black", "flake8", "isort"]


[tool.setuptools]
packages = { find = { include = ["hloc*", "ui", "api", "third_party*", "app.py", "datasets", "assets"] } }
include-package-data = true


[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
testpaths = ["tests"]
